// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Canonical Home Page A11y I can see the skip to content link 1`] = `"सामग्री को स्किप करें"`;

exports[`Canonical Home Page Analytics ATI tracking pixel excluding src 1`] = `"<img height="1px" width="1px" alt="" style="position:absolute" >"`;

exports[`Canonical Home Page Analytics ATI tracking pixel hostname 1`] = `"https://logws1363.ati-host.net/hit.xiti"`;

exports[`Canonical Home Page Analytics ATI tracking pixel search params 1`] = `
[
  {
    "s": "598342",
  },
  {
    "s2": "52",
  },
  {
    "p": "hindi.page",
  },
  {
    "x1": "[urn:bbc:tipo:topic:c6z8lgd39q7t]",
  },
  {
    "x2": "[responsive]",
  },
  {
    "x3": "[news-hindi]",
  },
  {
    "x4": "[hi]",
  },
  {
    "x7": "[index-home]",
  },
  {
    "x8": "[simorgh-nojs]",
  },
  {
    "x9": "[BBC%20News%20हिंदी]",
  },
]
`;

exports[`Canonical Home Page Footer Anchors should match text and url 1`] = `
{
  "text": "BBC News, हिंदी",
  "url": "/hindi",
}
`;

exports[`Canonical Home Page Footer Anchors should match text and url 2`] = `
{
  "text": "आप बीबीसी पर क्यों भरोसा कर सकते हैं",
  "url": "https://www.bbc.com/hindi/institutional-50223932",
}
`;

exports[`Canonical Home Page Footer Anchors should match text and url 3`] = `
{
  "text": "इस्तेमाल की शर्तें",
  "url": "https://www.bbc.com/hindi/institutional-37342293",
}
`;

exports[`Canonical Home Page Footer Anchors should match text and url 4`] = `
{
  "text": "बीबीसी के बारे में",
  "url": "https://www.bbc.com/hindi/institutional-37343168",
}
`;

exports[`Canonical Home Page Footer Anchors should match text and url 5`] = `
{
  "text": "निजता की नीति",
  "url": "https://www.bbc.com/hindi/institutional-37342614",
}
`;

exports[`Canonical Home Page Footer Anchors should match text and url 6`] = `
{
  "text": "कुकीज़",
  "url": "https://www.bbc.com/usingthebbc/cookies/",
}
`;

exports[`Canonical Home Page Footer Anchors should match text and url 7`] = `
{
  "text": "बीबीसी से संपर्क",
  "url": "https://www.bbc.co.uk/hindi/send/u50853357",
}
`;

exports[`Canonical Home Page Footer Anchors should match text and url 8`] = `
{
  "text": "अन्य भाषाएँ",
  "url": "https://www.bbc.com/ws/languages",
}
`;

exports[`Canonical Home Page Footer Anchors should match text and url 9`] = `
{
  "text": "बाहरी साइटों का लिंक देने की हमारी नीति के बारे में पढ़ें.",
  "url": "https://www.bbc.com/editorialguidelines/guidance/links-and-feeds",
}
`;

exports[`Canonical Home Page Footer I can click on the BBC branding and it would take me to the homepage 1`] = `"/hindi"`;

exports[`Canonical Home Page Footer Paragraphs should match text 1`] = `"बीबीसी के लिए कलेक्टिव न्यूज़रूम की ओर से प्रकाशित"`;

exports[`Canonical Home Page Footer Paragraphs should match text 2`] = `"© 2026 BBC. बाहरी साइटों की सामग्री के लिए बीबीसी ज़िम्मेदार नहीं है. बाहरी साइटों का लिंक देने की हमारी नीति के बारे में पढ़ें."`;

exports[`Canonical Home Page Header I can see the branding 1`] = `
{
  "brandLink": "BBC News, हिंदी",
  "svg": <path
    d="M801.13876,138.83621c-1.89038-5.59493-3.88512-10.43925-5.96321-14.53294-2.08509-4.09368-4.39258-7.4715-6.92245-10.13345-2.52298-2.66194-5.33782-4.63581-8.41673-5.92854-3.09291-1.29275-6.56802-1.94607-10.42535-1.94607-3.16237,0-5.9911,.44481-8.4793,1.33444-2.4952,.88963-4.59418,2.14068-6.31085,3.76703-1.71667,1.61942-3.03034,3.54462-3.94079,5.78955-.90356,2.23798-1.35524,4.68446-1.35524,7.34641,0,2.66888,.33353,5.21962,1.00771,7.67306,.59771,2.16848,1.56385,4.38559,2.6898,6.63052h-80.35171c-2.97466-4.74006-6.18571-9.07701-9.66082-12.94134-3.7114-4.10759-7.72166-7.6105-12.04477-10.50875-4.32301-2.8913-8.94497-5.12928-13.86569-6.71394-4.92082-1.5777-10.17518-2.37697-15.77707-2.37697-3.81565,0-7.28388,.49346-10.39057,1.4804-3.1068,.97999-5.74782,2.36308-7.93026,4.1354-2.18234,1.77925-3.87122,3.92687-5.06664,6.45676-1.19553,2.52989-1.79324,5.31694-1.79324,8.36809,0,2.39088,.28496,4.55241,.86878,6.48457,.57692,1.92522,1.34835,3.80177,2.31448,5.61578h-9.494v8.4515h10.5365v65.30847h9.54968v-65.30847h53.43333v10.12649h-15.63103c-3.20405,0-5.85906,.25022-7.98584,.75758-2.11977,.50041-4.00336,1.29274-5.64357,2.37697-1.64031,1.07729-2.93998,2.46038-3.91301,4.1354-.95914,1.675-1.4456,3.73227-1.4456,6.16485,0,4.55241,2.00852,8.49319,6.02578,11.80845-2.23791,1.66111-4.03804,3.70448-5.38639,6.13707-1.34835,2.43257-2.02252,5.21268-2.02252,8.34028,0,2.19627,.26407,4.28134,.80621,6.24826,.54214,1.96691,1.36224,3.91993,2.46041,5.84515,1.10506,1.93216,2.53677,3.89909,4.30911,5.9077,1.77924,2.00862,3.73919,3.99639,5.87996,5.96331,2.14066,1.96692,5.3586,4.74701,9.63993,8.34028l6.36642-6.19961c-4.67054-3.74618-8.24991-6.79038-10.7381-9.1465-2.4882-2.35613-4.37868-4.37866-5.67146-6.07451-1.29267-1.70281-2.21013-3.34307-2.75227-4.92077-.54214-1.58466-.81321-3.30136-.81321-5.15708,0-3.89907,1.4596-6.93633,4.37179-9.1187,2.91909-2.18238,7.07527-3.26662,12.47566-3.26662,9.76507,0,14.65111,3.1415,14.65111,9.43842,0,2.27272-.81321,4.18405-2.43262,5.727-1.61942,1.54295-4.05194,2.75924-7.29777,3.64887l3.12758,7.98582c5.24746-1.4248,9.20915-3.64192,11.87106-6.65138,2.66191-3.0164,3.99636-6.76258,3.99636-11.23854,0-3.2805-.93135-6.25521-2.78005-8.938-1.8557-2.68279-4.5385-4.76785-8.04841-6.25521-3.5099-1.48736-7.70087-2.23102-12.56602-2.23102-3.81565,0-7.4228,.50041-10.82156,1.50819-3.66972-1.73756-5.50453-4.09369-5.50453-7.06144,0-1.35529,.36832-2.47428,1.09817-3.36391,.73664-.88269,1.71667-1.48736,2.92598-1.79316,1.21631-.30581,3.05812-.45872,5.53242-.45872h25.47257v-18.58493h82.20052v11.28717h-.57692c-3.08591,0-5.95631,.22242-8.62522,.66723-2.66191,.44481-5.04586,1.07729-7.15184,1.91131-2.09898,.82707-4.00326,1.89047-5.69914,3.18321-1.66809,1.2719-3.04423,2.77315-4.17018,4.48291h-33.80594c-4.78868,0-7.17963,2.02947-7.17963,6.08146,0,2.08507,.73674,4.3439,2.19634,6.77648,1.47338,2.43257,3.3083,4.46205,5.50453,6.1023,2.19634,1.64026,4.22576,2.46038,6.07456,2.46038,1.93216,0,3.42644-.56991,4.48983-1.7028,1.06339-1.13984,1.59163-2.77315,1.59163-4.89297v-6.36642h18.25826c-.12514,1.02169-.36843,1.95302-.36843,3.06505,0,3.00946,.40321,5.72004,1.21631,8.13874,.81321,2.40477,1.96695,4.55934,3.47512,6.44982,1.50127,1.89046,3.41255,3.55157,5.72703,4.98331,2.31438,1.4248,5.02496,2.54379,8.13876,3.35696,3.0998,.80624,6.42888,1.20934,9.98746,1.20934,2.15456,0,4.3369-.17375,6.54013-.51431,.84799,1.89046,2.05031,4.26745,3.61415,7.14484,1.56374,2.87739,3.17626,5.64359,4.83736,8.30553l7.87459-3.93383c-3.32219-4.43424-6.10224-8.81984-8.34026-13.14289,2.16156-.84793,3.7184-2.00167,4.66364-3.46817,.94524-1.47345,1.41092-3.28051,1.41092-5.44899,0-1.54295-.38232-3.0164-1.15374-4.42729-.77153-1.40395-1.96006-2.57159-3.55858-3.50292-1.60552-.92439-3.5029-1.38311-5.70614-1.38311-2.31438,0-4.21186,.65332-5.69914,1.96692-1.48738,1.30664-2.23113,3.18321-2.23113,5.60883,0,.54213,.04868,1.20239,.14603,1.97387,.09725,.77148,.27796,1.50125,.54903,2.20322-1.16064,.11121-2.14066,.16681-2.94687,.16681-4.17018,0-7.69398-.61162-10.57128-1.84875-2.87051-1.23715-5.00418-2.93995-6.39431-5.12233-1.39003-2.18237-2.08499-4.70531-2.08499-7.55491,0-3.3222,.84089-6.0606,2.51598-8.22212,1.68188-2.16153,4.12151-3.76008,7.32555-4.80261,3.20405-1.04255,7.85369-1.56381,13.94904-1.56381h5.73403v-19.62746h27.61323v65.30847h9.55657v-65.30847h12.32973v-8.4515h-13.0248Zm-180.62267,0h-11.29413c-.88267-1.34833-1.70277-2.92605-2.46041-4.7192-.75064-1.79316-1.12596-3.87128-1.12596-6.22741,0-2.00167,.4031-3.80873,1.21631-5.41424,.81321-1.59855,1.98774-2.95384,3.53069-4.07283,1.54295-1.12594,3.41265-1.99472,5.61589-2.60634,2.19623-.61858,4.67054-.93134,7.40891-.93134,14.20633,0,27.28659,8.02753,39.2549,23.97136h-42.1462Zm162.96222,0h-21.05231c-.92435-1.84181-1.78624-3.67667-2.45341-5.53238-.77153-2.14066-1.15374-4.5246-1.15374-7.14484,0-3.51682,.97303-6.28997,2.92598-8.34028,1.94616-2.04337,4.77489-3.06505,8.4793-3.06505,2.42563,0,4.63586,.47955,6.6236,1.44564,1.99474,.96608,3.85044,2.43259,5.588,4.39951,1.73756,1.96691,3.37787,4.469,4.92082,7.49931,1.54295,3.0303,3.07201,6.60966,4.57318,10.7381h-8.4514Z"
  />,
}
`;

exports[`Canonical Home Page Header Navigation link should match text and url 1`] = `
{
  "text": "मौजूदा पन्ना, होम पेज",
  "url": "/hindi",
}
`;

exports[`Canonical Home Page Main heading should match text 1`] = `"BBC News, हिंदी - होम पेज"`;

exports[`Canonical Home Page Most Read has item with rank 1`] = `
{
  "text": "पाकिस्तान भारत के मिसाइल हमलों को क्यों नहीं रोक पाया?",
  "url": "https://www.bbc.com/hindi/articles/cx2jgwp0je1o",
}
`;

exports[`Canonical Home Page Most Read has item with rank 2`] = `
{
  "text": "लाहौर का एयर डिफ़ेंस सिस्टम तबाह करने का भारत का दावा, पाकिस्तान ने 25 भारतीय ड्रोन गिराने का दावा किया",
  "url": "https://www.bbc.com/hindi/articles/c365nejek65o",
}
`;

exports[`Canonical Home Page Most Read has item with rank 3`] = `
{
  "text": "भारत-पाकिस्तान के बीच बढ़े तनाव की दुनिया भर में चर्चा, क्या कह रहा है अंतरराष्ट्रीय मीडिया?",
  "url": "https://www.bbc.com/hindi/articles/cz703jn7y2wo",
}
`;

exports[`Canonical Home Page Most Read has item with rank 4`] = `
{
  "text": "चीन क्यों नहीं चाहेगा कि भारत और पाकिस्तान के बीच युद्ध हो?",
  "url": "https://www.bbc.com/hindi/articles/cddedl5vdq4o",
}
`;

exports[`Canonical Home Page Most Read has item with rank 5`] = `
{
  "text": "भारत का हवाई हमला: अमेरिका, इसराइल,  चीन, रूस और तुर्की  क्या बोले?",
  "url": "https://www.bbc.com/hindi/articles/c3r8rzpz881o",
}
`;

exports[`Canonical Home Page Most Read has item with rank 6`] = `
{
  "text": "भारत ने बहावलपुर को निशाना क्यों बनाया?",
  "url": "https://www.bbc.com/hindi/articles/cgjljw6xq4jo",
}
`;

exports[`Canonical Home Page Most Read has item with rank 7`] = `
{
  "text": "कौन है द रेज़िस्टेंस फ़्रंट ग्रुप जिसका नाम पहलगाम हमले में आ रहा है?",
  "url": "https://www.bbc.com/hindi/articles/c5yq871757po",
}
`;

exports[`Canonical Home Page Most Read has item with rank 8`] = `
{
  "text": "पाकिस्तान क्या भारतीय हवाई हमले का जवाब देगा? चार बड़े सवाल",
  "url": "https://www.bbc.com/hindi/articles/cly2ypjrkp2o",
}
`;

exports[`Canonical Home Page Most Read has item with rank 9`] = `
{
  "text": "भारत का मिसाइल और एयर डिफ़ेंस सिस्टम पाकिस्तान की तुलना में कैसा है?",
  "url": "https://www.bbc.com/hindi/articles/c9343dq12z4o",
}
`;

exports[`Canonical Home Page Most Read has item with rank 10`] = `
{
  "text": "भारत के 'ऑपरेशन सिंदूर' पर मीडिया को जानकारी देने वाली दो महिला अधिकारी कौन हैं?",
  "url": "https://www.bbc.com/hindi/articles/c77n7zz1zg2o",
}
`;

exports[`Canonical Home Page Page content First item in the first curation is the correct headline 1`] = `"कौन है द रेज़िस्टेंस फ़्रंट ग्रुप जिसका नाम पहलगाम हमले में आ रहा है?"`;

exports[`Canonical Home Page Page content First item in the first curation is the correct image 1`] = `
<img
  alt="पहलगाम"
  class="css-1seqhu9"
  loading="lazy"
  src="https://ichef.bbci.co.uk/ace/ws/240/cpsprodpb/8b52/live/6c11f130-2c01-11f0-8da1-ad2bbee6cda5.jpg.webp"
  style="aspect-ratio:16 / 9"
/>
`;

exports[`Canonical Home Page SEO Apple Touch Icon should match attributes 1`] = `
{
  "sizes": null,
  "url": "http://192.168.1.106:7081/hindi/images/icons/icon-192x192.png",
}
`;

exports[`Canonical Home Page SEO Apple Touch Icon should match attributes 2`] = `
{
  "sizes": "152x152",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/hindi/images/icons/icon-152x152.png",
}
`;

exports[`Canonical Home Page SEO Apple Touch Icon should match attributes 3`] = `
{
  "sizes": "180x180",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/hindi/images/icons/icon-180x180.png",
}
`;

exports[`Canonical Home Page SEO Apple Touch Icon should match attributes 4`] = `
{
  "sizes": "384x384",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/hindi/images/icons/icon-384x384.png",
}
`;

exports[`Canonical Home Page SEO Apple Touch Icon should match attributes 5`] = `
{
  "sizes": "512x512",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/hindi/images/icons/icon-512x512.png",
}
`;

exports[`Canonical Home Page SEO Canonical link 1`] = `"http://192.168.1.106:7081/hindi"`;

exports[`Canonical Home Page SEO Dir attribute 1`] = `"ltr"`;

exports[`Canonical Home Page SEO FB app ID 1`] = `"1609039196070050"`;

exports[`Canonical Home Page SEO Heading level 1 1`] = `"BBC News, हिंदी - होम पेज"`;

exports[`Canonical Home Page SEO Lang attribute 1`] = `"hi"`;

exports[`Canonical Home Page SEO Linked data should match text 1`] = `
{
  "@context": "https://schema.org",
  "@graph": [
    {
      "@type": "CollectionPage",
      "headline": "BBC News हिंदी",
      "image": {
        "@type": "ImageObject",
        "height": 576,
        "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/hindi/images/metadata/poster-1024x576.png",
        "width": 1024,
      },
      "inLanguage": {
        "@type": "Language",
        "alternateName": "hi",
        "name": "Hindi",
      },
      "mainEntityOfPage": {
        "@id": "http://192.168.1.106:7081/hindi",
        "@type": "WebPage",
        "name": "BBC News हिंदी",
      },
      "publisher": {
        "@type": "NewsMediaOrganization",
        "logo": {
          "@type": "ImageObject",
          "height": 576,
          "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/hindi/images/metadata/poster-1024x576.png",
          "width": 1024,
        },
        "name": "BBC News हिंदी",
        "publishingPrinciples": "https://www.bbc.com/hindi/institutional-50223932",
      },
      "thumbnailUrl": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/hindi/images/metadata/poster-1024x576.png",
      "url": "http://192.168.1.106:7081/hindi",
    },
    {
      "@type": "ItemList",
      "itemListElement": [
        {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 1,
          "url": "https://www.bbc.com/hindi/articles/c365nejek65o",
        },
        {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 2,
          "url": "https://www.bbc.com/hindi/articles/c5yq871757po",
        },
        {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 3,
          "url": "https://www.bbc.com/hindi/articles/cx2jgwp0je1o",
        },
        {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 4,
          "url": "https://www.bbc.com/hindi/live/c1memd40vk5t",
        },
        {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 5,
          "url": "https://www.bbc.com/hindi/articles/cgjljw6xq4jo",
        },
        {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 6,
          "url": "https://www.bbc.com/hindi/articles/cz703jn7y2wo",
        },
        {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 7,
          "url": "https://www.bbc.com/hindi/articles/cddedl5vdq4o",
        },
        {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 8,
          "url": "https://www.bbc.com/hindi/articles/cly2ypjrkp2o",
        },
        {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 9,
          "url": "https://www.bbc.com/hindi/articles/c5ygyg8j794o",
        },
        {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 10,
          "url": "https://www.bbc.com/hindi/articles/cj6860krekgo",
        },
        {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 11,
          "url": "https://www.bbc.com/hindi/articles/c3r8rzpz881o",
        },
        {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 12,
          "url": "https://www.bbc.com/hindi/articles/c77n7zz1zg2o",
        },
        {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 13,
          "url": "https://www.bbc.com/hindi/articles/c0l0lk2r0r4o",
        },
        {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 14,
          "url": "https://www.bbc.com/hindi/articles/creqevwwrqeo",
        },
        {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 15,
          "url": "https://www.bbc.com/hindi/articles/c9343dq12z4o",
        },
        {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 16,
          "url": "https://www.bbc.com/hindi/articles/cx2y278l8v0o",
        },
        {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 17,
          "url": "https://www.bbc.com/hindi/articles/cx2v2v8mldeo",
        },
        {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 18,
          "url": "https://www.bbc.com/hindi/articles/cy5r5wn2n7wo",
        },
        {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 19,
          "url": "https://www.bbc.com/hindi/articles/cy9vzq3pg0no",
        },
        {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 20,
          "url": "https://whatsapp.com/channel/0029Vaf8zY1ElagsEvZ4Gp1I",
        },
        {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 21,
          "url": "https://www.bbc.com/hindi/articles/cm2xp04glj3o",
        },
        {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 22,
          "url": "https://www.bbc.com/hindi/articles/ce8g5z7x85yo",
        },
        {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 23,
          "url": "https://www.bbc.com/hindi/articles/cedyq5y6zg3o",
        },
        {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 24,
          "url": "https://www.bbc.com/hindi/articles/cze1ee3w4xeo",
        },
        {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 25,
          "url": "https://www.bbc.com/hindi/articles/cgjl384z5z5o",
        },
        {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 26,
          "url": "https://www.bbc.com/hindi/articles/ce8gkn4dkg6o",
        },
        {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 27,
          "url": "https://www.bbc.com/hindi/articles/c209rrnl5rqo",
        },
        {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 28,
          "url": "https://www.bbc.com/hindi/articles/c8dgzvd2rvgo",
        },
        {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 29,
          "url": "https://www.bbc.com/hindi/articles/cx20vvrkprzo",
        },
        {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 30,
          "url": "https://www.bbc.com/hindi/articles/c628392j6zeo",
        },
        {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 31,
          "url": "https://www.bbc.com/hindi/articles/c2kvkx0y0d9o",
        },
        {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 32,
          "url": "https://www.bbc.com/hindi/articles/c9djd6d2e79o",
        },
        {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 33,
          "url": "https://www.bbc.com/hindi/articles/c0jzjqx8w3jo",
        },
        {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 34,
          "url": "https://www.bbc.com/hindi/articles/c8x8xrkx9x1o",
        },
        {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 35,
          "url": "https://www.bbc.com/hindi/articles/c2dedprnw75o",
        },
        {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 36,
          "url": "https://www.bbc.com/hindi/articles/c89g9l0157wo",
        },
        {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 37,
          "url": "https://www.bbc.com/hindi/articles/cpdzw61lpxjo",
        },
        {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 38,
          "url": "https://www.bbc.com/hindi/bbc_hindi_tv/tv_programmes/w13xttlw",
        },
        {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 39,
          "url": "https://www.bbc.com/programmes/p08s9wv2",
        },
        {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 40,
          "url": "https://www.bbc.com/hindi/podcasts/p05525mc",
        },
        {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 41,
          "url": "https://www.bbc.com/hindi/podcasts/p0552909",
        },
        {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 42,
          "url": "https://www.bbc.com/hindi/podcasts/p0kjf03y",
        },
        {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 43,
          "url": "https://www.bbc.com/hindi/podcasts/p09ds7zx",
        },
        {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 44,
          "url": "https://www.youtube.com/playlist?list=PLYxuvEJLss6A0bxcJJ5wKJASYN_veB0Wp",
        },
        {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 45,
          "url": "https://www.bbc.com/hindi/articles/ce9p7dy1qd1o",
        },
        {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 46,
          "url": "https://www.bbc.com/hindi/articles/c9djz01093po",
        },
        {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 47,
          "url": "https://www.bbc.com/hindi/articles/c93g38p51pzo",
        },
        {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 48,
          "url": "https://www.bbc.com/hindi/articles/cevdvjkl2jro",
        },
        {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 49,
          "url": "https://www.bbc.com/hindi/articles/cgkgl6k4pxzo",
        },
        {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 50,
          "url": "https://www.bbc.com/hindi/articles/c4grnx2kwrpo",
        },
        {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 51,
          "url": "https://www.bbc.com/hindi/articles/cgqvwgvenxno",
        },
        {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 52,
          "url": "https://www.bbc.com/hindi/articles/cedy31d9192o",
        },
        {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 53,
          "url": "https://www.bbc.com/hindi/articles/c33zg0lk31xo",
        },
        {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 54,
          "url": "https://www.bbc.com/hindi/articles/c62xy96wy0eo",
        },
        {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 55,
          "url": "https://www.bbc.com/hindi/articles/c9qwrjp8zpgo",
        },
        {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 56,
          "url": "https://www.bbc.com/hindi/articles/cpq73gnr8r1o",
        },
        {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 57,
          "url": "https://www.bbc.com/hindi/articles/czrvz25yx4ko",
        },
        {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 58,
          "url": "https://www.bbc.com/hindi/articles/ce8grxyd18ro",
        },
        {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 59,
          "url": "https://www.bbc.com/hindi/articles/ckgevrd222ko",
        },
        {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 60,
          "url": "https://www.bbc.com/hindi/articles/cy5r0dg461zo",
        },
        {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 61,
          "url": "https://bit.ly/4gA4bwJ",
        },
        {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 62,
          "url": "https://www.facebook.com/bbchindi",
        },
        {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 63,
          "url": "https://x.com/BBCHindi",
        },
        {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 64,
          "url": "https://www.youtube.com/user/bbchindi",
        },
        {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 65,
          "url": "https://www.instagram.com/bbchindi/",
        },
      ],
      "name": "BBC News हिंदी",
      "numberOfItems": 65,
    },
  ],
}
`;

exports[`Canonical Home Page SEO OG description 1`] = `"हिंदी में ताज़ा समाचार, ब्रेकिंग न्यूज़, वीडियो, ऑडियो और फ़ीचर. बीबीसी हिंदी डॉटकॉम पर भारत, पाकिस्तान और चीन सहित दुनिया भर की ताज़ा ख़बरें. BBC HINDI for up-to-the-minute news, breaking news, video, audio and feature stories."`;

exports[`Canonical Home Page SEO OG image 1`] = `"https://static.files.bbci.co.uk/ws/simorgh-assets/public/hindi/images/metadata/poster-1024x576.png"`;

exports[`Canonical Home Page SEO OG image alt 1`] = `"BBC News हिंदी"`;

exports[`Canonical Home Page SEO OG locale 1`] = `"hi-IN"`;

exports[`Canonical Home Page SEO OG site name 1`] = `"BBC News हिंदी"`;

exports[`Canonical Home Page SEO OG title 1`] = `"BBC News हिंदी - BBC News हिंदी"`;

exports[`Canonical Home Page SEO OG type 1`] = `"website"`;

exports[`Canonical Home Page SEO OG url 1`] = `"http://192.168.1.106:7081/hindi"`;

exports[`Canonical Home Page SEO Page title 1`] = `"BBC News हिंदी - BBC News हिंदी"`;

exports[`Canonical Home Page SEO Robots meta tag 1`] = `"noodp, noydir, max-image-preview:large"`;

exports[`Canonical Home Page SEO Twitter card 1`] = `"summary_large_image"`;

exports[`Canonical Home Page SEO Twitter creator 1`] = `"@bbchindi"`;

exports[`Canonical Home Page SEO Twitter description 1`] = `"हिंदी में ताज़ा समाचार, ब्रेकिंग न्यूज़, वीडियो, ऑडियो और फ़ीचर. बीबीसी हिंदी डॉटकॉम पर भारत, पाकिस्तान और चीन सहित दुनिया भर की ताज़ा ख़बरें. BBC HINDI for up-to-the-minute news, breaking news, video, audio and feature stories."`;

exports[`Canonical Home Page SEO Twitter image alt 1`] = `"BBC News हिंदी"`;

exports[`Canonical Home Page SEO Twitter image src 1`] = `"https://static.files.bbci.co.uk/ws/simorgh-assets/public/hindi/images/metadata/poster-1024x576.png"`;

exports[`Canonical Home Page SEO Twitter site 1`] = `"@bbchindi"`;

exports[`Canonical Home Page SEO Twitter title 1`] = `"BBC News हिंदी - BBC News हिंदी"`;

exports[`Canonical Home Page Timestamp should match text and date 1`] = `
{
  "date": "2025-05-08",
  "text": "8 मई 2025",
}
`;

exports[`Canonical Home Page messageBanner has a link 1`] = `"https://whatsapp.com/channel/0029Vaf8zY1ElagsEvZ4Gp1I"`;

exports[`Canonical Home Page messageBanner has an image 1`] = `
<img
  alt=""
  class="css-1seqhu9"
  loading="eager"
  sizes="(max-width: 37.4375rem) 184px, 224px"
  src="https://ichef.bbci.co.uk/ace/ws/224/cpsprodpb/3bc3/live/e712bd90-225e-11ef-80aa-699d54c46324.png.webp"
  srcset="https://ichef.bbci.co.uk/ace/ws/184/cpsprodpb/3bc3/live/e712bd90-225e-11ef-80aa-699d54c46324.png.webp 184w, 
                          https://ichef.bbci.co.uk/ace/ws/368/cpsprodpb/3bc3/live/e712bd90-225e-11ef-80aa-699d54c46324.png.webp 368w, 
                          https://ichef.bbci.co.uk/ace/ws/224/cpsprodpb/3bc3/live/e712bd90-225e-11ef-80aa-699d54c46324.png.webp 224w, 
                          https://ichef.bbci.co.uk/ace/ws/448/cpsprodpb/3bc3/live/e712bd90-225e-11ef-80aa-699d54c46324.png.webp 448w"
  style="aspect-ratio:16 / 9"
/>
`;
